--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,64 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background: linear-gradient(to right, #e3ecff 50%, #e5eeff 50%);
+  /*  */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  /*  */
+  padding: 100px 0;
 }
-
-.App-link {
-  color: #61dafb;
+/* Utility classes */
+.center {
+  max-width: 1200px;
+  margin: 0 auto;
 }
+.width {
+  width: 422px;
+}
+/*  */
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* Media Query */
+@media only screen and (max-width: 600px) {
+  .center {
+    max-width: 400px;
   }
-  to {
-    transform: rotate(360deg);
+
+  .App {
+    padding: 50px 0;
+  }
+}
+@media only screen and (max-width: 376px) {
+  .center {
+    max-width: 350px;
+  }
+
+  .App {
+    padding: 30px 0;
+  }
+}
+@media only screen and (max-width: 345px) {
+  .center {
+    max-width: 330px;
+  }
+}
+@media only screen and (max-width: 330px) {
+  .center {
+    max-width: 320px;
+  }
+}
+@media only screen and (max-width: 321px) {
+  .center {
+    max-width: 310px;
+  }
+}
+@media only screen and (max-width: 311px) {
+  .center {
+    max-width: 300px;
+  }
+}
+@media only screen and (max-width: 300px) {
+  .center {
+    max-width: 290px;
   }
 }
