--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+/* Default behaviour reset */
 *,
 *::before,
 *::after {
@@ -5,7 +6,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+/*  */
 
+/* Custom CSS variables */
 :root {
   --color-1: #4c82ef;
   --color-2: #737373;
@@ -25,25 +28,13 @@
   --color-16: #dcf7c5;
   --border-rad: 20px;
   --line-height: 1.5;
-  /* background: linear-gradient(100.24deg, #E6EEFF 13.91%, #FFFFFF 116.73%);
-background: linear-gradient(114.92deg, #E6EEFF 34.14%, #FAFCFF 105.26%);
-background: linear-gradient(156.72deg, #E6EEFF 28.87%, rgba(230, 238, 255, 0) 103.1%);
-background: linear-gradient(100.27deg, #EFF3FD 33.17%, rgba(239, 243, 253, 0) 122.24%);
-background: #EFF3FD;
-background: #F6F9FF;
-background: radial-gradient(152.95% 83.67% at 54.44% 42.5%, #FFFFFF 50.47%, rgba(227, 225, 225, 0) 100%)  */
-  /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */
 }
 
 body {
   font-family: "Poppins", sans-serif;
 }
 
-.width {
-  width: 422px;
-}
-
-/* General styles */
+/* General default styles */
 li {
   list-style: none;
 }
